--- a/css/style.css
+++ b/css/style.css
@@ -40,10 +40,15 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
-html, body {
+html {
   max-width: 100%;
   overflow-x: hidden;
 }
+
+body {
+  max-width: 100%;
+}
+
 
 .hidden-section {
   display: none !important;
@@ -76,6 +81,7 @@ header {
   z-index: 1000;
   padding: 16px 0;
   box-shadow: 0px 2px 4px rgba(15, 23, 42, 0.1);
+  isolation: isolate;
 }
 
 #structure .structure-card{
@@ -517,13 +523,23 @@ footer { background: var(--primary); color: #94a3b8; padding: 60px 0 20px; margi
 @media (max-width: 768px) {
   .table-wrapper table, 
   .table-wrapper thead, 
-  .table-wrapper tbody, 
+  /* .table-wrapper tbody,  */
   .table-wrapper th, 
   .table-wrapper td, 
   .table-wrapper tr {
     display: block;
     width: 100%;
   }
+
+  .table-wrapper {
+    background: transparent;
+    border: none;
+  }
+
+  .table-wrapper tbody{
+    width: 100%;
+    border: none;
+  } 
 
   .table-wrapper thead tr {
     position: absolute;
@@ -534,30 +550,29 @@ footer { background: var(--primary); color: #94a3b8; padding: 60px 0 20px; margi
 
   .table-wrapper tr {
     background: var(--bg-white);
-    border: 1px solid var(--border);
-    border-radius: var(--radius);
-    margin-bottom: 20px; 
+    margin-bottom: 16px;
+    border: none;
+    border-radius: 12px;
     box-shadow: var(--shadow-sm);
     overflow: hidden;
   }
 
 
   .table-wrapper td {
-    border: none;
-    border-bottom: 1px solid var(--bg-subtle);
-    font-size: 0.9rem;
-    line-height: 1.4;
-    position: relative;
-    padding: 2px 4px;
-    text-align: left;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    gap: 12px;
+    border: none !important;
+    background: transparent;
+
+    padding: 10px 12px;
+  }
+
+  .table-wrapper td + td {
+    border-top: 1px solid var(--border);
   }
 
   .table-wrapper td::before {
     font-size: 0.8rem;
+    border: none;
+
   }
 
   .table-wrapper td:last-child {
@@ -592,10 +607,41 @@ footer { background: var(--primary); color: #94a3b8; padding: 60px 0 20px; margi
     content: none;
   }
 
-  footer{
+  footer, .footer-brand, .footer-brand p, .footer-contact, .footer-contact p {
     width: 100%;
+    font-size: 0.8rem;
   }
 }
+
+@media (max-width: 768px) {
+
+  #uw-widget-custom-trigger span {
+    display: none !important;
+  }
+
+  #uw-widget-custom-trigger {
+    width: 42px;
+    height: 42px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 0 !important;
+    min-width: 42px !important;
+  }
+
+  #uw-widget-custom-trigger img {
+    width: 22px;
+    height: 22px;
+
+    display: block;
+
+    margin: 0 !important;
+    padding: 0 !important;
+  }
+}
+
 
 @media (max-width: 768px) {
   .org-chart {
