--- a/css/style.css
+++ b/css/style.css
@@ -408,7 +408,7 @@ nav a:hover { color: var(--primary); }
 
 .modal-list li {
   margin-bottom: 10px;
-  color: var(--text-light);
+  color: var(--text-dark);
 }
 
 
