--- a/css/style.css
+++ b/css/style.css
@@ -79,10 +79,18 @@ header {
   position: sticky;
   top: 0;
   z-index: 1000;
-  padding: 16px 0;
+  padding: 28px 0;
   box-shadow: 0px 2px 4px rgba(15, 23, 42, 0.1);
   isolation: isolate;
 }
+
+header .header-flex .brand img {
+  height: 54px;      /* Adjust as needed */
+  width: auto;       /* Preserve aspect ratio */
+  max-height: 72px;  /* Safety limit */
+  object-fit: contain;
+}
+
 
 #structure .structure-card{
   box-shadow: 3px 4px 12px 2px rgba(199, 216, 255, 0.651);
@@ -138,8 +146,8 @@ body.page-mode main > section.active-page {
   font-weight: bold;
 }
 
-.brand-text h1 { font-size: 1.1rem; margin: 0; letter-spacing: -0.02em; }
-.brand-text p { font-size: 0.75rem; color: var(--text-light); text-transform: uppercase; letter-spacing: 0.05em; }
+.brand-text h1 { font-size: 1.1rem; margin: 0; letter-spacing: -0.02em; text-align: left;}
+.brand-text p { font-size: 0.6rem; color: var(--text-dark); text-transform: uppercase; letter-spacing: 0.05em; text-align: left}
 
 nav ul { display: flex; gap: 24px; align-items: center; }
 nav a { color: var(--text-light); font-size: 0.9rem; font-weight: 500; }
@@ -370,7 +378,7 @@ nav a:hover { color: var(--primary); }
 }
 
 .vm-card p {
-  font-size: 1rem;
+  font-size: 1.5rem;
   color: var(--text-light);
   line-height: 1.7;
 }
